Drawings: Add new level properties

--- a/Prevu.Drawings/Machines/HoldingTank/VRC_WaterCollectingTank.xaml
+++ b/Prevu.Drawings/Machines/HoldingTank/VRC_WaterCollectingTank.xaml
@@ -20,7 +20,7 @@
             <PathGeometry Figures="M0 2C0 0.89543 0.89543 0 2 0H98C99.1046 0 100 0.895431 100 2V33.1224C100 33.6817 99.7658 34.2155 99.3541 34.5942L89.7045 43.4719C89.3353 43.8115 88.852 44 88.3504 44H11.6496C11.148 44 10.6647 43.8115 10.2955 43.4719L0.645888 34.5942C0.234242 34.2155 0 33.6817 0 33.1224L0 2Z" FillRule="NonZero"/>
           </Path.Data>
         </Path>
-        <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="44" Width="100" 
+        <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="44" Width="100" 
                          HorizontalAlignment="Center" VerticalAlignment="Center" d:Opacity=".6">
           <Labels:WaterLevel.OpacityMask>
             <VisualBrush Visual="{Binding ElementName=path2}" />
