--- a/Prevu.Drawings/Machines/HoldingTank/VRC_WaterTank.xaml
+++ b/Prevu.Drawings/Machines/HoldingTank/VRC_WaterTank.xaml
@@ -15,7 +15,7 @@
             <PathGeometry Figures="M6 2H186V25V97C186 112 161 137 146 137H46C31 137 6 112 6 97V2Z" FillRule="NonZero"/>
           </Path.Data>
         </Path>
-        <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="96" Width="180" 
+        <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="96" Width="180" 
                          HorizontalAlignment="Center" VerticalAlignment="Top" d:Opacity=".6" Canvas.Left="6" Canvas.Top="2">
           <Labels:WaterLevel.OpacityMask>
             <VisualBrush Visual="{Binding ElementName=path2}" />
