--- a/Prevu.Drawings/Machines/Release_01/Separation Tanks/V01_DCT_Decanter.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Separation Tanks/V01_DCT_Decanter.xaml
@@ -46,7 +46,7 @@
                         <PathGeometry Figures="M75.8173 166.66L94.9063 149.692C95.3926 149.26 95.6708 148.64 95.6708 147.989V147.873H34.1685V147.989C34.1685 148.64 34.4467 149.26 34.933 149.692L54.022 166.66C54.4389 167.03 54.9774 167.235 55.5353 167.235H74.304C74.8619 167.235 75.4004 167.03 75.8173 166.66Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="164" Width="116" 
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="164" Width="116" 
                          HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Canvas.Left="7" d:Opacity=".6" Canvas.Top="3">
                     <Labels:WaterLevel.OpacityMask>
