Drawings: add new level controls to missing drawings

--- a/Prevu.Drawings/Machines/Release_01/Reactors/V01_STCN_PrewashReactor_w2Screw&ExtrctionBelt.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Reactors/V01_STCN_PrewashReactor_w2Screw&ExtrctionBelt.xaml
@@ -27,7 +27,7 @@
                         <PathGeometry Figures="M3 9.66823C3 6.8139 5.3139 4.5 8.16823 4.5H83.8318C86.6861 4.5 89 6.8139 89 9.66823V111.832C89 114.686 86.6861 117 83.8318 117H8.16824C5.3139 117 3 114.686 3 111.832V9.66823Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="110" Width="85" 
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="110" Width="85" 
                          HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Canvas.Left="4" Canvas.Top="6" d:Opacity=".6">
                     <Labels:WaterLevel.OpacityMask>
