--- a/Prevu.Drawings/Machines/Release_01/Reactors/V01_STC_WashingReactor.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Reactors/V01_STC_WashingReactor.xaml
@@ -22,7 +22,7 @@
                         <PathGeometry Figures="M6.26318 20.3553C6.26318 17.761 8.36627 15.6579 10.9606 15.6579H56.3684C58.9627 15.6579 61.0658 17.761 61.0658 20.3553V112.737C61.0658 115.331 58.9627 117.434 56.3684 117.434H10.9606C8.36627 117.434 6.26318 115.331 6.26318 112.737V20.3553Z" FillRule="NonZero"/>
                     </Path.Data>
                 </Path>
-                <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="101" Width="57" 
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="101" Width="57" 
                          HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Canvas.Left="5" Canvas.Top="17" d:Opacity=".6">
                     <Labels:WaterLevel.OpacityMask>
