--- a/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_BatchReactor_wExtractionBelt.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_BatchReactor_wExtractionBelt.xaml
@@ -23,7 +23,7 @@
                     </Path.Data>
                 </Path>
                 <Rectangle  Canvas.Left="3.33691" Canvas.Top="4.55756" Width="60.296" Height="111.978" RadiusX="5.16823" RadiusY="5.16823" Name="rect4" Fill="#FF808080"/>
-                <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="111" Width="61" 
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="111" Width="61" 
                          HorizontalAlignment="Left" VerticalAlignment="Center" 
                            Canvas.Left="3" Canvas.Top="6" d:Opacity=".6">
                     <Labels:WaterLevel.OpacityMask>
