--- a/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_BatchReactor.xaml
+++ b/Prevu.Drawings/Machines/Release_01/Reactors/V01_STR_BatchReactor.xaml
@@ -18,7 +18,7 @@
             <!--Unknown tag: sodipodi:namedview-->
             <Canvas Name="g16" >
                 <Rectangle  Canvas.Left="1.56592" Canvas.Top="15.6579" Width="54.8026" Height="101.776" RadiusX="4.69737" RadiusY="4.69737" Name="rect2" Fill="#FF808080"/>
-                <Labels:WaterLevel x:Name="WaterLevel" Background="Transparent" d:Background="lightblue" Height="102" Width="54" 
+                <Labels:WaterLevel x:Name="MaterialLevel" Background="Transparent" d:Background="lightblue" Height="102" Width="54" 
                          HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Canvas.Left="2" Canvas.Top="17" d:Opacity=".6">
                     <Labels:WaterLevel.OpacityMask>
