--- a/Prevu.Synoptics.V2911_Flex/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P810.xaml
@@ -198,7 +198,7 @@
     <Machines:V01_VS_Airlock Canvas.Left="1319" Canvas.Top="549" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="1144" Canvas.Top="432" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SA_Elutriator Canvas.Left="1151" Canvas.Top="197" Height="201" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="514" Canvas.Top="130" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-41-WT1" TrendName="WEIGHT"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="514" Canvas.Top="130" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-41-WT1" TrendName="WEIGHT" Color="DryMaterial" MaxFillingValue="6000"/>
     <Machines:V01_VS_Airlock Canvas.Left="1164" Canvas.Top="112" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="1061" Canvas.Top="206" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Blowers:VT_CMM_BlowerAirCompressor.RenderTransform>
@@ -212,7 +212,7 @@
     </Blowers:VT_CMM_BlowerAirCompressor>
     <Blowers:VT_CMM_BlowerAirCompressor Width="50" Canvas.Left="1223" Canvas.Top="721" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:SCW_ScrewConveyor_straight Height="22" Width="145" Canvas.Left="987" Canvas.Top="575" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="96" Canvas.Top="247" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" TrendName="WEIGHT"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="96" Canvas.Top="247" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" TrendName="WEIGHT" MaxFillingValue="6000" Color="DryMaterial"/>
     <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="351" Canvas.Top="178" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="987" Canvas.Top="255" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel HorizontalAlignment="Center" 
