--- a/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
@@ -210,7 +210,7 @@
         </TransformGroup>
       </Machines:CV_Valve_001.RenderTransform>
     </Machines:CV_Valve_001>
-    <Machines:V01_VRC_WaterTank Canvas.Left="453" Canvas.Top="689" HorizontalAlignment="Left" VerticalAlignment="Center" Width="253" Height="97" ComponentName="450-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_VRC_WaterTank Canvas.Left="453" Canvas.Top="661" HorizontalAlignment="Center" VerticalAlignment="Top" Width="253" Height="125" ComponentName="450-41-LT1" TrendName="LEVEL"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="1101" Canvas.Top="151" Height="118" Width="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="856" Canvas.Top="540" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="36" Canvas.Left="1110" Canvas.Top="475" Width="49" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -282,7 +282,7 @@
     <Labels:DeviceLabel 
             ComponentName="450-22-CV1" Canvas.Left="384" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="480" Canvas.Top="709" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="480" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="440-01-MA1" Canvas.Left="861" Canvas.Top="606" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
@@ -296,6 +296,6 @@
     <Labels:DeviceLabel 
       ComponentName="446-62-BAG" Canvas.Left="1352" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="589" Canvas.Top="709" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+      ComponentName="450-42-TT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="589" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
