--- a/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
@@ -142,7 +142,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="193" Canvas.Top="160" Height="305" Width="217" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="320-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="193" Canvas.Top="160" Height="305" Width="217" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="320-41-LT1" TrendName="LEVEL" Color="WetMaterial"/>
     <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="52" Canvas.Left="341" Canvas.Top="147"/>
     <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="949" Canvas.Top="520" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_STR_BatchReactor Canvas.Left="728" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="330-41-LT1" TrendName="LEVEL" Height="300" Width="137"/>
