--- a/Prevu.Synoptics.V2911_Flex/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P020.xaml
@@ -23,7 +23,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="66" StatusComponent="032-01-MA1" PipeHeight="Medium" Canvas.Left="671" Canvas.Top="153" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="805" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="538"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-23-CV1" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="538"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="201" Canvas.Top="383">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -85,8 +85,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="64" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="439" Canvas.Top="199" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="348" Canvas.Top="368" StatusComponent="020-DEBALER" PipeHeight="Medium" Canvas.Left="267" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="64" StatusComponent="020-23-CV1" PipeHeight="Medium" Canvas.Left="439" Canvas.Top="199" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="348" Canvas.Top="368" StatusComponent="020-23-CV1" PipeHeight="Medium" Canvas.Left="267" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
