--- a/Prevu.Synoptics.V2911_Flex/Details/D820.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D820.xaml
@@ -8,13 +8,13 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="450" Width="332">
-        <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="83"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="820-01-MA1" Canvas.Left="117" Canvas.Top="26"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+  <Canvas Height="450" Width="332">
+    <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="820-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="85"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+		VerticalAlignment="Top" 
+		ComponentName="820-01-MA1" Canvas.Left="117" Canvas.Top="22"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             ComponentName="820-41-WT1" Canvas.Left="34" Canvas.Top="163" VerticalAlignment="Center"/>
-    </Canvas>
+  </Canvas>
 </UserControl>
