--- a/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P430.xaml
@@ -188,7 +188,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:V01_VSP_SepTank_w4Paddles Height="263" Canvas.Left="495" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center" Width="210"/>
+    <Machines:V01_VSP_SepTank_w4Paddles Height="263" Canvas.Left="495" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center" Width="210" ComponentName="430-41-LT1" TrendName="LEVEL"/>
     <Machines:STR_Washing_reactor_B Height="162" Width="155" Canvas.Left="193" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:CV_Valve_001 Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="427" Canvas.Top="429" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:CV_Valve_001.RenderTransform>
