--- a/Prevu.Synoptics.V2911_Flex/Details/D810.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D810.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas Height="450" Width="332">
-    <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" MaxFillingValue="4000" ComponentName="810-41-WT1" Color="DryMaterial" TrendName="WEIGHT"/>
+    <Machines:V01_SLX_MixingSiloScrew Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="5" Canvas.Top="2" ComponentName="810-41-WT1" Color="DryMaterial" TrendName="WEIGHT"/>
     <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" SignalName="LSHA" Canvas.Left="34" Canvas.Top="85"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
