V2150: Some fix on drawings

--- a/Prevu.Synoptics.V2150_Planeta/Details/D140.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D140.xaml
@@ -77,6 +77,8 @@
             ComponentName="141-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="140-01-MA2" Canvas.Left="331" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="140-01-YA1" Canvas.Left="150" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
