--- a/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
@@ -449,7 +449,7 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="775" Canvas.Top="272"/>
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="272"/>
+    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="272"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="950" Canvas.Top="483" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
