--- a/Prevu.Synoptics.V2150_Planeta/Pages/P380.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P380.xaml
@@ -169,7 +169,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-VLV" DetailsPageName="D380" Canvas.Left="422" Canvas.Top="37"/>
+    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="380-VALVE" DetailsPageName="D380" Canvas.Left="422" Canvas.Top="37"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="380-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="463" Canvas.Top="108"/>
