--- a/Prevu.Synoptics.V2150_Planeta/Pages/P443.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P443.xaml
@@ -72,16 +72,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="169" RenderTransformOrigin="0.5,0.5" StatusComponent="443-02-MA1" Height="24" Canvas.Left="206" Canvas.Top="324" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" RenderTransformOrigin="0.5,0.5" StatusComponent="446-01-MA1" Height="24" Canvas.Left="900" Canvas.Top="455" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -152,6 +142,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Rectangle Height="47" Canvas.Left="330" Canvas.Top="322" Width="56" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="335" Canvas.Top="329" Height="33" Width="32" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="442-01-MA1" 
@@ -208,10 +200,8 @@
         <Labels:DeviceLabel 
             ComponentName="443-01-MA1" Canvas.Left="381" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="443-02-MA1" Canvas.Left="247" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="268" Canvas.Top="313" Height="45" Width="45" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="443-02-MA1" Canvas.Left="230" Canvas.Top="319" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_DCE_Centrifuge Canvas.Left="369" Canvas.Top="317" Height="184" Width="143" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="28" Stroke="Black" Width="2" Canvas.Left="206" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="904" Canvas.Top="152" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
         <Machines:V01_VS_Airlock Canvas.Left="1310" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="848" Canvas.Top="470" HorizontalAlignment="Left" VerticalAlignment="Center" Height="86" Width="164"/>
