--- a/Prevu.Synoptics.V2150_Planeta/Pages/P460.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P460.xaml
@@ -168,16 +168,6 @@
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="144" Color="Water" StatusComponent="477-01-MA1" VisibilityComponent="477-23-CV1" Canvas.Left="1228" Canvas.Top="511"/>
         <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="905" Canvas.Top="510"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="559" Canvas.Top="586"/>
-        <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="356" Canvas.Top="715">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="46" Stroke="Black" VerticalAlignment="Center" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1143" Canvas.Top="610">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -188,7 +178,6 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="349" Canvas.Top="742"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="552" Canvas.Top="610"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="1170" Canvas.Top="462">
             <Machines:CV_Valve.RenderTransform>
@@ -268,9 +257,6 @@
             ComponentName="477-01-MA1" Canvas.Left="944" Canvas.Top="656"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="473-43-CT1" Canvas.Left="312" Canvas.Top="671"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
             ComponentName="477-23-CV1" Canvas.Left="1175" Canvas.Top="435"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
@@ -313,8 +299,7 @@
             JumpFromLabel="466-01-MA1" 
             JumpToLabel="510-01-MA1" Canvas.Left="1414" Canvas.Top="361" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="460-61-LEV" Canvas.Left="455" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="460-VIEW" DetailsPageName="D460" Canvas.Left="549" Canvas.Top="222" HorizontalAlignment="Left" VerticalAlignment="Top" HideComponentName="True"/>
+            ComponentName="460-61-LS1" Canvas.Left="469" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="974" Canvas.Top="149" Height="174" Width="192" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="851" Canvas.Top="469" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
