--- a/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
@@ -461,14 +461,14 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-VLV" DetailsPageName="D510" Canvas.Left="452" Canvas.Top="77"/>
+    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-VALVE" DetailsPageName="D510" Canvas.Left="452" Canvas.Top="77"/>
     <Labels:DeviceLabel 
             ComponentName="519-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1152" Canvas.Top="256" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="518-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1291" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
             ComponentName="527-61-LEV" Canvas.Left="773" Canvas.Top="329" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DetailsLabel ComponentName="527-VIEW" DetailsPageName="D527" Canvas.Left="871" Canvas.Top="329" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DetailsLabel ComponentName="527-HOPPER" DetailsPageName="D527" Canvas.Left="871" Canvas.Top="329" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="540-01-MA1" Canvas.Left="1028" Canvas.Top="721" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
