--- a/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P810.xaml
@@ -426,7 +426,7 @@
             ComponentName="849-01-MA1" Canvas.Left="1149" Canvas.Top="40" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel 
             ComponentName="873-62-BAG" Canvas.Left="589" Canvas.Top="779" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DetailsLabel ComponentName="873-VIEW" DetailsPageName="D873" HideComponentName="True" Canvas.Left="688" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="873-BAG" DetailsPageName="D873" HideComponentName="True" Canvas.Left="688" Canvas.Top="779" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="854-01-MA1" Canvas.Left="849" Canvas.Top="296" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:Pipe Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="878-01-MA1" Height="26"  Color="Air" Canvas.Left="1119" Canvas.Top="784" HorizontalAlignment="Left" VerticalAlignment="Center">
