--- a/Prevu.Synoptics.V2150_Planeta/Details/D180.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D180.xaml
@@ -77,5 +77,7 @@
             ComponentName="181-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="180-01-MA2" Canvas.Left="331" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel 
+            ComponentName="180-01-YA1" Canvas.Left="150" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
