--- a/Prevu.Synoptics.V2150_Planeta/Details/D510.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D510.xaml
@@ -8,19 +8,72 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="300" Width="400" >
-        <Labels:Pipe HorizontalAlignment="Left" Margin="188,40,0,0" VerticalAlignment="Top" Width="67" StatusComponent="510-27-CV1" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="188,110,0,0" VerticalAlignment="Top" Width="67" StatusComponent="510-27-CV2" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="188,180,0,0" VerticalAlignment="Top" Width="67" StatusComponent="510-27-CV3" Color="Air"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="188,250,0,0" VerticalAlignment="Top" Width="67" StatusComponent="510-27-CV4" Color="Air"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="134,6,0,0" VerticalAlignment="Top" Height="74" Width="67"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="134,76,0,0" VerticalAlignment="Top" Height="74" Width="67"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="134,146,0,0" VerticalAlignment="Top" Height="74" Width="67"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="134,216,0,0" VerticalAlignment="Top" Height="74" Width="67"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="35,18,0,0" VerticalAlignment="Top" ComponentName="510-27-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="35,88,0,0" VerticalAlignment="Top" ComponentName="510-27-CV2"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="35,158,0,0" VerticalAlignment="Top" ComponentName="510-27-CV3"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" Margin="35,228,0,0" VerticalAlignment="Top" ComponentName="510-27-CV4"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-VLV-BLK" Canvas.Left="286" Canvas.Top="126"/>
+    <Canvas Height="313" Width="520" >
+        <Machines:V01_DCE10_20_DETAIL_CleaningValve Canvas.Left="12" Canvas.Top="18" HorizontalAlignment="Left" VerticalAlignment="Center" Width="492" Height="277"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-20-VB1" Canvas.Left="27" Canvas.Top="30"/>
+        <Rectangle Height="66" Stroke="Black" Width="2" Canvas.Left="331" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="77.137"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Height="66" Stroke="Black" Width="2" Canvas.Left="194" Canvas.Top="61" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-78.657"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Height="114" Stroke="Black" Width="2" Canvas.Left="354" Canvas.Top="96" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="68.3"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Height="168" Stroke="Black" Width="2" Canvas.Left="373" Canvas.Top="125" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="61.969"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Height="114" Stroke="Black" Width="2" Canvas.Left="171" Canvas.Top="95" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-68.3"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle Height="168" Stroke="Black" Width="2" Canvas.Left="153" Canvas.Top="124" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-62.465"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-27-CV1" Canvas.Left="220" Canvas.Top="14"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-27-CV2" Canvas.Left="220" Canvas.Top="89"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-27-CV3" Canvas.Left="220" Canvas.Top="164"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-27-CV4" Canvas.Left="220" Canvas.Top="239"/>
     </Canvas>
 </UserControl>
