V2911 - Small mod on p350

--- a/Prevu.Synoptics.V2911_Flex/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P350.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Color="Oil" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-21-CV1" VisibilityComponent="377-21-CV1" Canvas.Left="1258" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Color="Oil" Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="380-21-CV1" VisibilityComponent="" Canvas.Left="1258" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="75" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="825" Canvas.Top="265" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -270,7 +270,7 @@
     <Machines:V01_VB_VibratingScreen Canvas.Left="820" Canvas.Top="471" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DCE_Centrifuge Canvas.Left="1164" Canvas.Top="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="1052" Canvas.Top="313" HorizontalAlignment="Center" VerticalAlignment="Top" />
-    <Machines:V01_CV_Valve_wColor Canvas.Left="1324" Canvas.Top="313" Height="30" Width="55" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_CV_Valve_wColor Canvas.Left="1324" Canvas.Top="313" Height="30" Width="55" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:EXC_HeatExchanger HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="50" Height="70" Canvas.Left="188" Canvas.Top="591">
       <Machines:EXC_HeatExchanger.RenderTransform>
         <TransformGroup>
@@ -357,7 +357,7 @@
     <Labels:DeviceLabel 
       ComponentName="379-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1064" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="380-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1185" Canvas.Top="88" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="380-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="1183" Canvas.Top="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
       ComponentName="380-21-CV1" Loaded="DeviceLabel_Loaded" Canvas.Left="1304" Canvas.Top="350" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
