--- a/Prevu.Synoptics.V3738-Mastek/P230.xaml
+++ b/Prevu.Synoptics.V3738-Mastek/P230.xaml
@@ -44,8 +44,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="831" Canvas.Top="359" Color="Chemicals" Width="253" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="231-02-CV1"/>
-    <Labels:Pipe Canvas.Left="642" Canvas.Top="359" Color="Chemicals" Width="185" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="231-02-MA1"/>
+    <Labels:Pipe Canvas.Left="975" Canvas.Top="359" Color="Chemicals" Width="109" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="231-02-CV1"/>
+    <Labels:Pipe Canvas.Left="642" Canvas.Top="359" Color="Chemicals" Width="302" HorizontalAlignment="Left" VerticalAlignment="Center" StatusComponent="231-02-MA1"/>
     <Labels:Pipe Canvas.Left="642" Canvas.Top="327" RenderTransformOrigin="0.5,0.5" Color="Air" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="230-22-CV2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
