--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -152,8 +152,8 @@
     <Labels:Pipe Width="44" StatusComponent="292-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="128" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="68" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="280" Canvas.Top="669" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Rectangle HorizontalAlignment="Left" Height="102" Stroke="White" StrokeThickness="2" VerticalAlignment="Center" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="1350" Canvas.Top="96"/>
-    <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="594" Canvas.Top="494" ComponentName="330-41-LT1" TrendName="LEVEL"/>
-    <Machines:STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="1053" Canvas.Top="347" TrendName="LEVEL" ComponentName="335-41-LT1"/>
+    <Machines:V01_STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="137" Canvas.Left="594" Canvas.Top="494" ComponentName="330-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_STR_BatchReactor HorizontalAlignment="Left" VerticalAlignment="Center" Height="300" Width="136" Canvas.Left="1053" Canvas.Top="347" TrendName="LEVEL" ComponentName="335-41-LT1"/>
     <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="556" Canvas.Top="388">
       <Machines:CV_Valve.RenderTransform>
         <TransformGroup>
@@ -204,7 +204,7 @@
         </TransformGroup>
       </Machines:CV_Valve.RenderTransform>
     </Machines:CV_Valve>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="39" Canvas.Top="250" Height="346" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="39" Canvas.Top="250" Height="346" Width="258" HorizontalAlignment="Left" VerticalAlignment="Center" Color="DryMaterial" ComponentName="320-41-LT1" TrendName="LEVEL"/>
     <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="226" Canvas.Left="648" Canvas.Top="150" >
       <Machines:SCW_ScrewConveyor_straight.RenderTransform>
         <TransformGroup>
