--- a/Prevu.Synoptics.V2911_Flex/Details/D335.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D335.xaml
@@ -9,81 +9,81 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Stirrer="clr-namespace:Prevu.Drawings.Machines.Stirrer;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D335" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="550" Width="620">
-        <Labels:Pipe Width="68" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="337-21-CV1" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="" VisibilitySignal="" Canvas.Left="227" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionTwo">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="44" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="328" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="91" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="411" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="182" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="145" Canvas.Top="195" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_STR_BatchReactor Height="300" Width="137" Canvas.Left="196" Canvas.Top="175" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve.RenderTransform>
-        </Machines:CV_Valve>
-        <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="343" Canvas.Top="358" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:CV_Valve.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve.RenderTransform>
-        </Machines:CV_Valve>
-        <Machines:WaterPump Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="58" Canvas.Top="235" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Canvas.Left="488" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="195" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="579" Canvas.Top="392" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+  <Canvas Height="550" Width="620">
+    <Labels:Pipe Width="68" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="337-21-CV1" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="" VisibilitySignal="" Canvas.Left="227" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionTwo">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="44" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="328" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="91" StatusComponent="335-23-CV1" PipeHeight="Medium" Canvas.Left="411" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="182" Canvas.Top="67" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="130" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="335-21-CV1" Canvas.Left="145" Canvas.Top="195" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_STR_BatchReactor Height="300" Width="137" Canvas.Left="196" Canvas.Top="175" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center" Color="WetMaterial"/>
+    <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:CV_Valve.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:CV_Valve.RenderTransform>
+    </Machines:CV_Valve>
+    <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="343" Canvas.Top="358" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:CV_Valve.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:CV_Valve.RenderTransform>
+    </Machines:CV_Valve>
+    <Machines:WaterPump Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Chemicals" Canvas.Left="58" Canvas.Top="235" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Canvas.Left="488" Canvas.Top="386" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="195" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="579" Canvas.Top="392" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
             ComponentName="335-01-MA1" Canvas.Left="218" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="335-42-TT1" RenderTransformOrigin="0.478,0.56" Canvas.Left="218" Canvas.Top="361" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="335-41-LT1" Canvas.Left="218" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="337-21-CV1" Canvas.Left="36" Canvas.Top="177" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="336-01-MA1" Canvas.Left="466" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="335-23-CV1" Canvas.Left="350" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
+            ComponentName="335-23-CV1" Canvas.Left="348" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
             ComponentName="335-21-CV1" Canvas.Left="92" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-    </Canvas>
+  </Canvas>
 </UserControl>
